test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-oknil-shared.good
init-var-nonnil-borrowed-from-oknil-shared.chpl:9: error: cannot assign to non-nilable borrowed MyClass from nilable shared MyClass?
